Init Next.js in /dashboard

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Trakker is a tool to measure and analyze website's statistics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "publish": "npx tsc && npm publish"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
