--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Trakker is a tool to measure and analyze website's statistics",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cd dashboard && npm run dev"
   },
   "repository": {
     "type": "git",
