--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,12 +15,14 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "chart.js": "^4.1.1",
     "classnames": "^2.3.2",
     "encoding": "^0.1.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
