--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
+    "supabase": "^1.27.10",
     "tailwindcss": "^3.2.4"
   }
 }
