Add property adding functionality

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "18.0.10",
     "chart.js": "^4.1.1",
     "classnames": "^2.3.2",
+    "cryptico": "^1.0.2",
     "encoding": "^0.1.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "generate-api-key": "^1.0.2",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
