--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -31,6 +31,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "supabase": "^1.27.10",
