--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -16,13 +16,14 @@
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.6.1",
-    "react-helmet": "^6.1.0"
+    "trakker-analytics": "^0.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-helmet": "^6.1.6",
     "@types/react-dom": "^18.0.9",
+    "@types/react-helmet": "^6.1.6",
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
